--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -1,4 +1,4 @@
-<div class="row no-gutters justify-content-end" id="contact-me-wrapper">
+<div class="row justify-content-end" id="contact-me-wrapper">
     <div class="col-sm-12">
         <h3 class="sub-title">Contact Me</h3>
         <hr>
