--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,30 +1,31 @@
-<app-portfolio></app-portfolio>
 <div class="row no-gutters content-stye" id="about-me-wrapper">
   <div class="col-sm-12" id="about-me-title">
     <h3 class="title sub-title">About me</h3>
     <hr>
   </div>
-  <div class="col-sm-12 col-md-6 content-container">
-    <p>&nbsp;&nbsp;Hello world! My name is Cassandre Henriquez a millennial woman whom was
+  <div class="col-sm-12 col-lg-7 content-container">
+    <p>&nbsp; &nbsp;Hello world! My name is Cassandre Henriquez a millennial woman
       born in Brooklyn, NY, but grew up in Haiti. After the devastating 2010
       earthquake, I moved to Wellington, Palm Beach, FL.
-      I completed high school and attended Palm beach state college. Once I received my AA degree I transferred to Florida
+      I completed high school and attended Palm Beach State College. Once I received my AA degree I transferred to Florida
       Atlantic University and graduated with Bachelors of Science in Computer Science.
-      <br><br> &nbsp; &nbsp;Honestly at first
+      <br> &nbsp; &nbsp;Honestly at first
       I was not sure which track I wanted to follow as a CS major, this IT world is so vast! It wasn’t until I took a
       course on web development that I found my niche.
-      I love the user interaction aspect and bringing a website and web application to life. I enjoy seeing creative websites that push
+      I enjoy bringing a website/web application to life and working on creative websites that push
       my CSS
       skills.
-      <br><br> &nbsp; &nbsp;The last 3 years of career, I have worked in the FSI (Finanical Services and Insurance) industry. And I wanted to create this profilio
+      <br> &nbsp; &nbsp;The last 3 years of career, I have worked in the FSI (Finanical Services and Insurance) industry. And I wanted to create this profilio
       to showcase my skills and upskill (forever a developer's jounery). Feel free to check out my web site. <fa-icon [icon]="faLaughBeam"></fa-icon>
     </p>
     <p>Sincerly, </p>
     <p id="signature"> Cassnadre Henriquez</p>
   </div>
-  <div class="col-sm-12 col-md-6" id="photo-container">
-    <img src="../../assets/IMG_3118.jpg" alt="">
+  <div class="col-sm-12 col-lg-5" id="photo-container">
+    <img src="../../assets/head-shot-sitting-5.jpg" alt="">
   </div>
 
 </div>
+<app-portfolio></app-portfolio>
+<!-- <app-technical-skills></app-technical-skills> -->
 <app-contact-me></app-contact-me>
