--- a/src/app/technical-skills/technical-skills.component.scss
+++ b/src/app/technical-skills/technical-skills.component.scss
@@ -1,9 +1,8 @@
-.row {
-    // background-color: #d4e4e4;
-    padding: 20px 5.5%;
-}
+
 #skills-wrapper {
     background-image: linear-gradient(to bottom, #e6f3f3, #b3d8d8);
+    padding-top: 10px;
+    padding-bottom: 30px;
 }
 .sub-title {
     color: #22c0e8;
