--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,12 +1,16 @@
 #about-me-title {
-  padding: 20px 30px 0 30px;
+  // padding-left: 15px;
+  // padding-right: 15px;
 }
 .content-stye {
     color: slategray;
     padding: 0;
-    background-image: linear-gradient(to bottom, white, #e6f3f3);
+    // background-image: linear-gradient(to bottom, white, #e6f3f3);
     .content-container {
-        padding: 20px 30px;
+        p {
+          margin-bottom: 10px;
+        }
+        padding: 10px 0 10px 5px;
         #signature {
             font-family: cursive;
             font-size: 20px;
@@ -18,13 +22,12 @@
        }  
     }
     #photo-container {
-        padding: 20px 10px 30px 10px;
+        position: relative;
+        padding: 20px 20px 30px 25px;
         text-align: center;
         img {
-            margin-top: 10px;
-            height: 29em;
-            width: 23em;
-            box-shadow: -2px 2px 20px 9px #22c0e8;
+            width: 100%;
+            box-shadow: -2px 2px 20px 7px #22c0e8;
         }
     }
     hr {
@@ -45,8 +48,16 @@
     }
   }
 @media screen and (max-width: 767px) {
-  #photo-container {
+  .content-stye #photo-container {
     padding-top: 0;
     padding-bottom: 40px;
+  }
+}
+@media screen and (min-width: 767px) and (max-width: 991px){
+ .content-stye #photo-container {
+    img {
+      width: 450px;
+      height: 300px;
+    }
   }
 }
