--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,23 +1,25 @@
-<div class="portfolio-container">
-<div class="col-sm-12">
-    <h3 class="sub-title">Portfolio</h3>
-    <hr>
-</div>
-<div class="row" id="portfolio-wrapper">
-    <div class="col-sm-12 col-md-3 portfolio-item">
-        <h4>Build a Bot</h4>
-        <a class="btn btn-outline-primary" href="https://cassandrehenriquez-build-a-bot.netlify.app">Live site</a>
-        <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">GitHub</a>
+<div class="row portfolio-container">
+    <div class="col-sm-12">
+        <h3 class="sub-title">Portfolio</h3>
+        <hr>
     </div>
-    <div class="col-sm-12 col-md-3 portfolio-item">
-        <h4>Mattr</h4>
-        <a class="btn btn-outline-primary" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
-        <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">GitHub</a>
+    <div class="col-sm-12">
+        <div class="row" id="portfolio-wrapper">
+            <div class="col-sm-12 col-lg-3 portfolio-item">
+                <h4>Build a Robot</h4>
+                <a class="btn btn-outline-primary" href="https://cassandrehenriquez-build-a-bot.netlify.app">Live site</a>
+                <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">GitHub</a>
+            </div>
+            <div class="col-sm-12 col-lg-3 portfolio-item">
+                <h4>Mattr</h4>
+                <a class="btn btn-outline-primary" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
+                <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">GitHub</a>
+            </div>
+            <div class="col-sm-12 col-lg-3 portfolio-item">
+                <h4>Tic Tac Toe</h4>
+                <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
+                <a class="btn btn-outline-primary"href="javascript:void(0)">TBD</a>
+            </div>
+        </div>
     </div>
-    <div class="col-sm-12 col-md-3 portfolio-item">
-        <h4>Tic Tac Toe</h4>
-        <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
-        <a class="btn btn-outline-primary"href="javascript:void(0)">TBD</a>
-    </div>
-</div>
 </div>
