--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -1,6 +1,3 @@
-.row { 
-    padding: 20px 5.5%;
-}
 .sub-title {
     color: #22c0e8;
     line-height: 2;
@@ -11,6 +8,9 @@ hr {
 #resume-pdf {
     h5 {
         display: inline-block;
+    }
+    .btn-danger {
+        margin-top: 20px;
     }
     a {
         float: right;
@@ -39,12 +39,15 @@ hr {
 ul.timeline {
     list-style-type: circle;
     margin-left: 10px;
+    &:last-child {
+        margin-bottom: 0;
+    }
     &:before {
         content: ' ';
         background: #d4d9df;
         display: inline-block;
         position: absolute;
-        left: 19px;
+        left: 28px;
         width: 2px;
         height: 100%;
         z-index: 400;
@@ -58,7 +61,7 @@ ul.timeline {
             position: absolute;
             border-radius: 50%;
             border: 3px solid #22c0e8;
-            left: 10px;
+            left: 20px;
             width: 20px;
             height: 20px;
             z-index: 400;
