--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -6,19 +6,25 @@
     <div class="col-sm-12">
         <div class="row" id="portfolio-wrapper">
             <div class="col-sm-12 col-lg-3 portfolio-item">
+                <img src="../../assets/build-a-bot-logo.png" alt="build a robot logo">
                 <h4>Build a Robot</h4>
                 <a class="btn btn-outline-primary" href="https://cassandrehenriquez-build-a-bot.netlify.app">Live site</a>
-                <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">GitHub</a>
+                <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">View code</a>
             </div>
             <div class="col-sm-12 col-lg-3 portfolio-item">
+                <img id="mattr-logo" src="../../assets/mattr-logo.png" alt="mattr logo">
                 <h4>Mattr</h4>
                 <a class="btn btn-outline-primary" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
-                <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">GitHub</a>
+                <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">View code</a>
             </div>
             <div class="col-sm-12 col-lg-3 portfolio-item">
+                <div>
+                    <fa-icon [icon]="faHardHat" class="fa-3x"></fa-icon>
+                </div>
                 <h4>Tic Tac Toe</h4>
-                <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
-                <a class="btn btn-outline-primary"href="javascript:void(0)">TBD</a>
+                <p>Coming soon...</p>
+                <!-- <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
+                <a class="btn btn-outline-primary"href="javascript:void(0)">TBD</a> -->
             </div>
         </div>
     </div>
