--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -4,7 +4,7 @@
 }
 #portfolio-wrapper {
     margin: 0 !important;
-    padding: 20px 20px 0 20px;
+    padding: 50px 20px 50px 20px;
     height: auto;
     justify-content: center;
     display: flex;
@@ -28,6 +28,14 @@
                 border-color: #28a2c1;
             }
         }
+        img {
+            width: 5rem;
+            height: 5rem;
+        }
+        #mattr-logo {
+            width: auto;
+            height: auto;
+        }
     }
     .btn {
         color: white;
@@ -45,6 +53,9 @@
         .portfolio-item {
             margin-right: 0;
             margin-bottom: 50px;
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
     }
 }
