--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -55,16 +55,15 @@
             <ul class="timeline">
                 <h5>Senior Associate Web Developer at Synechron</h5>
                 <p class="date-range"> Feb 2017 - Oct 2018</p>
-                <h6 class="sub-title">> Client: Third largest US bank</h6>
-            <li>Created responsive applications’ features in Angular 5 based on requirements gathered during grooming sessions</li>
+                <h6 class="sub-title padding-top-0">> Client: Third largest US bank</h6>
+                <li>Created responsive applications’ features in Angular 5 based on requirements gathered during grooming sessions</li>
                 <li>Implemented and followed the Model View Controller (MVC) design patterns to build clean reusable components</li>
                 <li>Built classes and functions to capture data from diverse system using Angular’s HttpClient module</li>
                 <li>Troubleshoot technical issues using Chrome’s developer tools</li>
                 <li>Refactored application legacy source code to improve its performance and make it scalable</li>
                 <li>Produced various deliverables such as the Technical Design Document to ensure a smooth transition to development teams</li>
                 <li>Leveraged various SCM tools as GitHub to manage the source code of the application being developed</li>
-                <br>
-                <h6 class="sub-title">> Internal Organization</h6>
+                <h6 class="sub-title padding-top-0">> Internal Organization</h6>
                 <li>Built help desk web application with CRUD (Create, Read, Update, Delete) functionalities for ticketing system using Angular.js. 
                     <a class="btn btn-outline-primary btn-sm" href="https://github.com/chenriq5/HelpDesk">
                         <svg class="bi bi-code-slash" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
