--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -54,6 +54,7 @@ ul.timeline {
     }
     h5 {
         margin: 0;
+        padding-top: 15px;
         &:before {
             content: ' ';
             background: white;
@@ -76,4 +77,7 @@ ul.timeline {
 }
 .resume-content {
     padding-left: 0;
+}
+.padding-top-0 {
+    padding-top: 0;
 }
