--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -7,7 +7,8 @@
         <img src="../../assets/pngwave.png" alt="email logo">
     </div>
     <div class="col-sm-12 col-md-6">
-        <form data-netlify="true" method="POST">
+        <form method="post" (ngSubmit)="onSubmit()">
+            <input type="hidden" name="form-name" value="contact" />
             <div class="form-group">
                 <input #firstName="ngModel" [(ngModel)]="model.firstName" name="firstName" type="text"
                     class="form-control" id="firstName" placeholder="First name" required>
