--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" 
-          routerLink="/home" 
+          routerLink="/" 
           routerLinkActive="active">
           <!-- id="navbarDropdown" 
           role="button" 
