--- a/src/app/contact-me/contact-me.component.scss
+++ b/src/app/contact-me/contact-me.component.scss
@@ -36,7 +36,7 @@
                 margin-bottom: 0;
             }
         }
-        button {
+        button.btn-success  {
             margin-top: 40px;
             background-color: #28a2c1;
             border-color: #28a2c1;
