adding scroll to top button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
       <p>©2020 Cassandre Henriquez | All rights reserved</p>
     </div>
   </div>
+  <fa-icon [icon]="faChevronUp" id="scroll-to-top" [hidden]="showButton" (click)="scrollToTop()" ></fa-icon>
 </footer>
 </div>
 
