--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,3 +32,14 @@ footer div.col-sm-12 {
         -0.2rem 0.1rem 1rem #ff65bd, 0.2rem 0.1rem 1rem #ff65bd,
         0 -0.5rem 2rem #ff2483, 0 0.5rem 3rem #ff2483;
 }
+#scroll-to-top {
+    position: fixed;
+    bottom: 105px;
+    right: 30px;
+    z-index: 99;
+    color: white;
+    padding: 10px;
+    background-color: #ff65bd;
+    border-radius: 10px;
+    box-shadow: 0 0 0.6rem #ffe6ff, 0 0 1rem #ff65bd, -0.2rem 0.1rem 1rem #ff65bd;;
+}
