adding about me text adding props to technical skill comp and brand icons

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,19 +4,20 @@
     <hr>
   </div>
   <div class="col-sm-12 col-lg-7 content-container">
-    <p>&nbsp; &nbsp;Hello world! My name is Cassandre Henriquez a millennial woman
-      born in Brooklyn, NY, but grew up in Haiti. After the devastating 2010
-      earthquake, I moved to Wellington, Palm Beach, FL.
-      I completed high school and attended Palm Beach State College. Once I received my AA degree I transferred to Florida
-      Atlantic University and graduated with Bachelors of Science in Computer Science.
-      <br> &nbsp; &nbsp;Honestly at first
-      I was not sure which track I wanted to follow as a CS major, this IT world is so vast! It wasn’t until I took a
-      course on web development that I found my niche.
-      I enjoy bringing a website/web application to life and working on creative websites that push
-      my CSS
-      skills.
-      <br> &nbsp; &nbsp;The last 3 years of career, I have worked in the FSI (Finanical Services and Insurance) industry. And I wanted to create this profilio
-      to showcase my skills and upskill (forever a developer's jounery). Feel free to check out my web site. <fa-icon [icon]="faLaughBeam"></fa-icon>
+    <p> &nbsp; &nbsp;Bonjour le Monde! I’m Cassandre Henriquez, born in Brooklyn,
+      and raised in Haiti. Following the devastating 2010 earthquake in Haiti,
+      my family relocated to Wellington, Palm Beach, FL where I graduated high school.
+      Upon graduation I initially enrolled at Palm Beach State College later transferring
+      to Florida Atlantic University where I majored in and graduated with a degree in Computer Science.
+      Initially, I was unsure which path I wanted to follow as a CS major (vast IT universe)!
+       It wasn’t until I took a web development class that I found my niche. I enjoy bringing 
+       a website/web application to life and working on creative websites that push my CSS skills.
+    </p> 
+     <p>
+        &nbsp; &nbsp;I have spent the past three years as a developer in different 
+        capacities in FSI (Financial Services and Insurance) industry. This portfolio 
+        showcases my skills and upskill (forever a developer’s journey). 
+        Check it out and reach out!
     </p>
     <p>Sincerly, </p>
     <p id="signature"> Cassnadre Henriquez</p>
@@ -27,5 +28,9 @@
 
 </div>
 <app-portfolio></app-portfolio>
-<!-- <app-technical-skills></app-technical-skills> -->
+<app-technical-skills 
+  [bgColor]="{'background-image': 'linear-gradient(to bottom, #e6f3f3,  #e6f3f3)'}" 
+  [hrColor]="{'border-color': '#ff65bd'}"
+  [titleColor]="{'color': '#ff65bd'}">
+</app-technical-skills>
 <app-contact-me></app-contact-me>
