--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -94,4 +94,8 @@
         </div>
     </div>
 </div>
-<app-technical-skills></app-technical-skills>
+<app-technical-skills 
+    [bgColor]="{'background-image': 'linear-gradient(to bottom, #e6f3f3, #b3d8d8)'}" 
+    [hrColor]="{'border-color': '#22c0e8'}"
+    [titleColor]="{'color': '#22c0e8'}">
+</app-technical-skills>
