--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <p>©2020 Cassandre Henriquez | All rights reserved</p>
     </div>
   </div>
-  <fa-icon [icon]="faChevronUp" id="scroll-to-top" [hidden]="showButton" (click)="scrollToTop()" ></fa-icon>
+  <fa-icon class="fa-2x" [icon]="faChevronUp" id="scroll-to-top" [hidden]="showButton" (click)="scrollToTop()" ></fa-icon>
 </footer>
 </div>
 
