--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,12 +34,17 @@ footer div.col-sm-12 {
 }
 #scroll-to-top {
     position: fixed;
-    bottom: 105px;
-    right: 30px;
+    bottom: 75px;
+    right: 20px;
     z-index: 99;
     color: white;
     padding: 10px;
     background-color: #ff65bd;
     border-radius: 10px;
     box-shadow: 0 0 0.6rem #ffe6ff, 0 0 1rem #ff65bd, -0.2rem 0.1rem 1rem #ff65bd;;
+}
+@media screen and (min-width: 992px) {
+    #scroll-to-top {
+        display: none;
+    }
 }
