--- a/src/app/contact-me/contact-me.component.scss
+++ b/src/app/contact-me/contact-me.component.scss
@@ -1,6 +1,6 @@
 .row#contact-me-wrapper {
     padding-top: 20px;
-    padding-bottom: 20px;;
+    padding-bottom: 40px;
     // background-color: #d4e4e4;
     background-image: linear-gradient(to bottom, #e6f3f3, #b3d8d8);
     .wall-art {
