asding link to check out resume

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,7 +41,7 @@ footer div.col-sm-12 {
     padding: 10px;
     background-color: #ff65bd;
     border-radius: 10px;
-    box-shadow: 0 0 0.6rem #ffe6ff, 0 0 1rem #ff65bd, -0.2rem 0.1rem 1rem #ff65bd;;
+    box-shadow: 0 0 0.6rem #ffe6ff, 0 0 1rem #ff65bd, -0.2rem 0.1rem 1rem #ff65bd;
 }
 @media screen and (min-width: 992px) {
     #scroll-to-top {
