--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,4 +33,11 @@
   [hrColor]="{'border-color': '#ff65bd'}"
   [titleColor]="{'color': '#ff65bd'}">
 </app-technical-skills>
+<div class="row" id="checkResume">
+  <div class="col-sm-12">
+    <div class="alert alert-primary" role="alert">
+      <a href="javascript:void(0)" routerLink="/resume" >CLICK HERE FOR MY RESUME!</a>
+    </div>
+  </div>
+</div>
 <app-contact-me></app-contact-me>
