adding porfolio items descriptions

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -8,20 +8,29 @@
             <div class="col-sm-12 col-lg-3 portfolio-item">
                 <img src="../../assets/build-a-bot-logo.png" alt="build a robot logo">
                 <h4>Build a Robot</h4>
-                <a class="btn btn-outline-primary" href="https://cassandrehenriquez-build-a-bot.netlify.app">Live site</a>
-                <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">View code</a>
-            </div>
+                <p>Shopping like application, where a user can customize their robot.</p>
+                <p>Vue.js, Bootstrap, HTML5 & SASS</p>
+                <div>
+                    <a class="btn btn-outline-primary" href="https://cassandrehenriquez-build-a-bot.netlify.app">Live site</a>
+                    <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">View code</a>    
+                </div>
+                </div>
             <div class="col-sm-12 col-lg-3 portfolio-item">
                 <img id="mattr-logo" src="../../assets/mattr-logo.png" alt="mattr logo">
                 <h4>Mattr</h4>
-                <a class="btn btn-outline-primary" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
-                <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">View code</a>
-            </div>
-            <div class="col-sm-12 col-lg-3 portfolio-item">
+                <p>Built a digital agency homepage as a dev challenge</p>
+                <p>JavaScript, PHP & CSS</p>
                 <div>
-                    <fa-icon [icon]="faHardHat" class="fa-3x"></fa-icon>
+                    <a class="btn btn-outline-primary" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
+                    <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">View code</a>    
                 </div>
+                </div>
+            <div class="col-sm-12 col-lg-3 portfolio-item">
+                <br>
+                <br>
                 <h4>Tic Tac Toe</h4>
+                <br>
+                <fa-icon [icon]="faHardHat" class="fa-3x" [ngStyle]="{ 'line-height': 0 }"></fa-icon>
                 <p>Coming soon...</p>
                 <!-- <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
                 <a class="btn btn-outline-primary"href="javascript:void(0)">TBD</a> -->
