--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -10,13 +10,16 @@
     display: flex;
     .portfolio-item {
         min-height: 300px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding-top: 25px;
         box-shadow: -2px 2px 11px 2px #22c0e8;
         border: 1px solid #22c0e8;
         border-radius: 2%;
         color: #28a2c1;
         height: 50%;
         margin-right: 50px;
-        padding: 40px;
         text-align: center;
         &:hover {
             color: white;
@@ -30,8 +33,8 @@
             }
         }
         img {
-            width: 5rem;
-            height: 5rem;
+            width: 3.5rem;
+            height: 3.5rem;
         }
         #mattr-logo {
             width: auto;
