adding icons for sections

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,12 @@
 <div class="row no-gutters content-stye" id="about-me-wrapper">
   <div class="col-sm-12" id="about-me-title">
-    <h3 class="title sub-title">About me</h3>
+    <h3 class="title sub-title">
+      <svg class="bi bi-person-square margin-bottom-5" width="0.8em" height="0.8em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+        <path fill-rule="evenodd" d="M2 15v-1c0-1 1-4 6-4s6 3 6 4v1H2zm6-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+      </svg>
+      About me
+    </h3>
     <hr>
   </div>
   <div class="col-sm-12 col-lg-7 content-container">
@@ -9,7 +15,8 @@
       my family relocated to Wellington, Palm Beach, FL where I graduated high school.
       Upon graduation I initially enrolled at Palm Beach State College later transferring
       to Florida Atlantic University where I majored in and graduated with a degree in Computer Science.
-      Initially, I was unsure which path I wanted to follow as a CS major (vast IT universe)!
+    </p>
+      <p>&nbsp; &nbsp;Initially, I was unsure which path I wanted to follow as a CS major (vast IT universe)!
        It wasn’t until I took a web development class that I found my niche. I enjoy bringing 
        a website/web application to life and working on creative websites that push my CSS skills.
     </p> 
