--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,6 +1,11 @@
 <div class="row portfolio-container">
     <div class="col-sm-12">
-        <h3 class="sub-title">Portfolio</h3>
+        <h3 class="sub-title">
+            <svg class="bi bi-grid-3x3-gap-fill margin-bottom-5" width="0.8em" height="0.8em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2zM1 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V7zM1 12a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-2zm5 0a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1v-2z"/>
+            </svg>
+            Portfolio
+        </h3>
         <hr>
     </div>
     <div class="col-sm-12">
@@ -11,7 +16,7 @@
                 <p>Shopping like application, where a user can customize their robot.</p>
                 <p>Vue.js, Bootstrap, HTML5 & SASS</p>
                 <div>
-                    <a class="btn btn-outline-primary" href="https://cassandrehenriquez-build-a-bot.netlify.app">Live site</a>
+                    <a class="btn btn-outline-primary margin-right-8" href="https://cassandrehenriquez-build-a-bot.netlify.app">Live site</a>
                     <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/build-a-bot">View code</a>    
                 </div>
                 </div>
@@ -21,7 +26,7 @@
                 <p>Built a digital agency homepage as a dev challenge</p>
                 <p>JavaScript, PHP & CSS</p>
                 <div>
-                    <a class="btn btn-outline-primary" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
+                    <a class="btn btn-outline-primary margin-right-8" href="https://cassandreh1.github.io/Mode-Dev/">Live site</a>
                     <a class="btn btn-outline-primary" href="https://github.com/cassandreh1/Mode-Dev">View code</a>    
                 </div>
                 </div>
@@ -32,7 +37,7 @@
                 <br>
                 <fa-icon [icon]="faHardHat" class="fa-3x" [ngStyle]="{ 'line-height': 0 }"></fa-icon>
                 <p>Coming soon...</p>
-                <!-- <a class="btn btn-outline-primary" href="javascript:void(0)">TBD</a>
+                <!-- <a class="btn btn-outline-primary margin-right-8" href="javascript:void(0)">TBD</a>
                 <a class="btn btn-outline-primary"href="javascript:void(0)">TBD</a> -->
             </div>
         </div>
