--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -1,6 +1,12 @@
 <div class="row justify-content-end" id="contact-me-wrapper">
     <div class="col-sm-12">
-        <h3 class="sub-title">Contact Me</h3>
+        <h3 class="sub-title">
+            <svg class="bi bi-phone margin-bottom-5" width="0.8em" height="0.8em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+                <path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+            </svg>
+            Contact Me
+        </h3>
         <hr>
     </div>
     <div class="col-sm-12 col-md-6 wall-art">
