--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,13 +7,13 @@
 .sub-title {
     padding-top: 20px;
     color: #ff65bd;
-    svg {
-        padding-top: 5px;
-    }
     letter-spacing: 1px;
     font-weight: 300;
 }
 hr {
     border-top-width: 3px;
     border-color: #ff65bd;
+}
+.margin-bottom-5 {
+    margin-bottom: 5px;
 }
